feat: added api docs for user routes
